@@ -117,7 +117,7 @@ function gp_var_value = __gnuplot_get_var__ (h, gp_var_name, fmt = "")
       while (isempty (str))
         str = fread (istream, "*char")';
         if (isempty (str))
-          sleep (0.05);
+          pause (0.05);
         else
           str = regexp (str, 'OCTAVE:.*', "match");
           str = str{end}(8:end);
